# django-table-sort

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml  stale.yml  tests.yml
django_table_sort/: __init__.py  columns.py  helpers.py  table.py
django_table_sort/docs/: installation.rst
django_table_sort/static/: django_table_sort.css
django_table_sort/templates/django_table_sort/: table.html
docs/: conf.py  index.rst  installation.rst  requirements.txt  tablesort.rst  usage.rst
tests/: models.py  settings.py  table_test.py
tests/migrations/: 0001_initial.py
