[tool.poetry]
name = "django-table-sort"
version = "0.2.11"
description = "Create tables with sorting links on the headers in Django templates."
authors = ["TheRealVizard <vizard@divineslns.com>"]
readme = "README.md"
packages = [{include = "django_table_sort"}]
license = "MIT"
repository = "https://github.com/TheRealVizard/django-table-sort"
documentation = "https://django-table-sort.readthedocs.io/en/latest/"
keywords = ["django", "table", "sort", "templates"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7"
django = ">=3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
